Bug #21599
List of filesystems does not get refreshed after a filesystem deletion
0%
Description
Just tested 12.2.1 and was playing with multiple filesystems (CephFS), creating some and deleting some. After I have removed one FS, the list of FS available in the UI isn't updated and if you click on the one that was removed you get to an error page. Not a major issue as by default multiple FS is still disabled by default but just in case.
Restarting the Manager daemon and refreshing the dashboard page fixes the FS list
500 Internal Server Error
The server encountered an unexpected condition which prevented it from fulfilling the request.
Traceback (most recent call last):
File "/usr/lib/python2.7/site-packages/cherrypy/_cprequest.py", line 656, in respond
response.body = self.handler()
File "/usr/lib/python2.7/site-packages/cherrypy/lib/encoding.py", line 188, in call
self.body = self.oldhandler(*args, **kwargs)
File "/usr/lib/python2.7/site-packages/cherrypy/_cpdispatch.py", line 34, in call
return self.callable(*self.args, **self.kwargs)
File "/usr/lib64/ceph/mgr/dashboard/module.py", line 478, in filesystem
"fs_status": global_instance().fs_status(int(fs_id))
File "/usr/lib64/ceph/mgr/dashboard/module.py", line 355, in fs_status
stats = pool_stats[pool_id]
KeyError: 4L
Already reported an issue with cephmetrics who instructed me to create a tracker with ceph-mgr.
Related issues
History
#1 Updated by John Spray over 5 years ago
Hmm, the list in the menu is supposed to be updated every 5 seconds.
If you leave the console (the right click->inspect one, I don't know the proper name) open while you are removing the filesystem, can you see any javascript errors? If there is a javascript exception then the live updating can silently stop working.
#2 Updated by John Spray over 5 years ago
- Category changed from ceph-mgr to 132
#3 Updated by John Spray over 5 years ago
- Category changed from 132 to ceph-mgr
- Status changed from New to 12
- Assignee set to John Spray
Never mind, this was easy to reproduce locally. When a filesystem is deleted, ceph-mgr is somehow still holding on to an older FSMap, so this is nothing to do with the dashboard, it's some lower level issue.
#4 Updated by John Spray over 5 years ago
- Status changed from 12 to Fix Under Review
- Backport set to luminous
#5 Updated by Patrick Donnelly over 5 years ago
- Status changed from Fix Under Review to Pending Backport
#6 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22030: luminous: List of filesystems does not get refreshed after a filesystem deletion added
#7 Updated by John Spray about 5 years ago
- Status changed from Pending Backport to Resolved