mds: fix FSMap copy constructor

This was confusing ceph-mgr, which did a fsmap = new_fsmap
and found that old filesystems were never disappearing
after being removed.

Fixes: http://tracker.ceph.com/issues/21599
Signed-off-by: John Spray <john.spray@redhat.com>